// Copyright 2021 Datafuse Labs
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// The identifier of a database by name. Names can be changed.
// There is no guarantee that two get-database request by name will return the
// same instance.

syntax = "proto3";

package databend_proto;

message LockKey {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  message Table {
    uint64 table_id = 1;
    string tenant = 2;
  }

  oneof key {
    Table table = 1;
  }
}

message LockMeta {
  enum LockType {
    TABLE = 0;
  }

  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string user = 1;
  string node = 2;
  string query_id = 3;
  string created_on = 4;
  optional string acquired_on = 5;
  LockType lock_type = 6;
  map<string, string> extra_info = 7;
}
